--- a/PCL2-Log-Viewer/ViewerWindow.xaml
+++ b/PCL2-Log-Viewer/ViewerWindow.xaml
@@ -4,6 +4,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:system="clr-namespace:System;assembly=mscorlib"
         xmlns:ui="clr-namespace:AdonisUI;assembly=AdonisUI"
         xmlns:ct="clr-namespace:AdonisUI.Controls;assembly=AdonisUI"
         xmlns:ext="clr-namespace:AdonisUI.Extensions;assembly=AdonisUI"
@@ -93,6 +94,11 @@
                 
                 <local:BorderCard DockPanel.Dock="Top">
                     <StackPanel>
+                        
+                        <StackPanel.Resources>
+                            <Style TargetType="ToggleButton" BasedOn="{StaticResource {x:Type ToggleButton}}">
+                            </Style>
+                        </StackPanel.Resources>
                         
                         <Label Content="{x:Static prop:R.HeaderLogLevel}" FontWeight="Bold"/>
                         
@@ -188,12 +194,20 @@
                             <DataTemplate>
                                 <Border Padding="2" Margin="0,1" CornerRadius="4">
                                     
+                                    <Border.Resources>
+                                        <local:ItemExistenceConverter x:Key="LevelConverter">
+                                            <system:String>Notice</system:String>
+                                            <system:String>Warning</system:String>
+                                            <system:String>Error</system:String>
+                                        </local:ItemExistenceConverter>
+                                    </Border.Resources>
+                                    
                                     <Border.Style>
                                         <Style TargetType="Border">
                                             <Style.Triggers>
-                                                <DataTrigger Binding="{Binding Level}" Value="Notice"><Setter Property="Background" Value="{StaticResource NoticeBrushOpacity}"/></DataTrigger>
-                                                <DataTrigger Binding="{Binding Level}" Value="Warning"><Setter Property="Background" Value="{StaticResource WarningBrushOpacity}"/></DataTrigger>
-                                                <DataTrigger Binding="{Binding Level}" Value="Error"><Setter Property="Background" Value="{StaticResource ErrorBrushOpacity}"/></DataTrigger>
+                                                <DataTrigger Binding="{Binding Level, Converter={StaticResource LevelConverter}}" Value="True">
+                                                    <Setter Property="Background" Value="{local:ResourceBinding Level, Converter={StaticResource BrushOpacityKeyConverter}}"/>
+                                                </DataTrigger>
                                             </Style.Triggers>
                                         </Style>
                                     </Border.Style>
@@ -216,18 +230,11 @@
                                             <TextBlock Text="{Binding Time}" FontWeight="Bold"/>
                                         </local:BorderTag>
                                     
-                                        <local:BorderTag Grid.Row="0" Grid.Column="1" DataContext="{Binding Level}">
+                                        <local:BorderTag Grid.Row="0" Grid.Column="1" DataContext="{Binding Level}" Background="{local:ResourceBinding Converter={StaticResource BrushOpacityKeyConverter}}">
                                             <Border.Style>
                                                 <Style TargetType="local:BorderTag" BasedOn="{StaticResource {x:Type local:BorderTag}}">
                                                     <Style.Triggers>
                                                         <DataTrigger Binding="{Binding}" Value="Null"><Setter Property="Visibility" Value="Collapsed"/></DataTrigger>
-                                                        <DataTrigger Binding="{Binding}" Value="Trace"><Setter Property="Background" Value="{StaticResource TraceBrushOpacity}"/></DataTrigger>
-                                                        <DataTrigger Binding="{Binding}" Value="Dev"><Setter Property="Background" Value="{StaticResource DevBrushOpacity}"/></DataTrigger>
-                                                        <DataTrigger Binding="{Binding}" Value="Debug"><Setter Property="Background" Value="{StaticResource DebugBrushOpacity}"/></DataTrigger>
-                                                        <DataTrigger Binding="{Binding}" Value="Info"><Setter Property="Background" Value="{StaticResource InfoBrushOpacity}"/></DataTrigger>
-                                                        <DataTrigger Binding="{Binding}" Value="Notice"><Setter Property="Background" Value="{StaticResource NoticeBrushOpacity}"/></DataTrigger>
-                                                        <DataTrigger Binding="{Binding}" Value="Warning"><Setter Property="Background" Value="{StaticResource WarningBrushOpacity}"/></DataTrigger>
-                                                        <DataTrigger Binding="{Binding}" Value="Error"><Setter Property="Background" Value="{StaticResource ErrorBrushOpacity}"/></DataTrigger>
                                                     </Style.Triggers>
                                                 </Style>
                                             </Border.Style>
