feat: initial support for Pipe RPC

--- a/PCL2-Log-Viewer/MainWindow.xaml
+++ b/PCL2-Log-Viewer/MainWindow.xaml
@@ -44,6 +44,7 @@
             </MenuItem>
             
             <MenuItem Header="{x:Static prop:R.MenuHelp}">
+                <MenuItem Header="{x:Static prop:R.OptionRPCTest}" Click="MenuItemRPCTest_OnClick"/>
                 <MenuItem Header="{x:Static prop:R.OptionRepository}" Click="MenuItemBrowseRepository_OnClick"/>
                 <MenuItem Header="{x:Static prop:R.OptionAbout}" Click="MenuItemShowAbout_OnClick"/>
             </MenuItem>
